# AutoEntry-Bot

./: .env.example  .gitignore  AGENT_HANDOFF.md  ARCHITECTURE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8a80d47ffdf3_initial_tables.py
src/: main.py
src/application/: __init__.py  composer.py
src/application/use_cases/: __init__.py  process_inventory.py
src/config/: settings.py
src/domain/: __init__.py  exceptions.py  models.py  ports.py  schemas.py  value_objects.py
src/infrastructure/: __init__.py
src/infrastructure/exporters/: __init__.py  excel_exporter.py
src/infrastructure/logging/: __init__.py  setup.py
src/infrastructure/notifications/: __init__.py  telegram_notifier.py
src/infrastructure/parsers/: __init__.py  excel_parser.py
src/infrastructure/repositories/: __init__.py  postgres_repository.py
src/presentation/: __init__.py
src/presentation/telegram/: __init__.py  handlers.py  middleware.py  types.py
